--- a/frontend/smart-expense-tracker/src/index.css
+++ b/frontend/smart-expense-tracker/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(144, 130, 149, 0.87);
+  background-color: #e9c2ef;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
